@@ -28,6 +28,7 @@ Version 1.6.9.1
 	- Add classification for PROTO_IPSEC by port number: 500 (Ref: nDPI)
 	- Add classification for PROTO_OGG by content type after HTTP
 	- Add classification for protocols by hostnames: PROTO_WECHAT, PROTO_BITGRAVITY, PROTO_CACHEFLY, PROTO_CDN77
+	- Replace PROTO_TLS by PROTO_CDISCOUNT
 
 
 ## Version 1.6.9.0
